--- a/src/application/assets/styles/index.scss
+++ b/src/application/assets/styles/index.scss
@@ -10,11 +10,11 @@ $fa-font-path: 'node_modules/~@fortawesome/fontawesome-free/webfonts';
 
 :root {
 	--vh: 1vh;
+	--vw: 1vw;
 }
 
 body {
-	max-width: 100vw;
-	@extend .hide-scrollbar;
+	max-width: vw(100);
 
 	* {
 		max-width: 100%;
