--- a/src/application/assets/styles/layouts.scss
+++ b/src/application/assets/styles/layouts.scss
@@ -1,6 +1,6 @@
 body {
 	font-family: 'Nunito Sans', sans-serif !important;
-	max-width: 100vw;
+	max-width: vw(100);
 	// font-size: clamp(16px, calc(1rem + 20%), 30px) !important;
 }
 
